# agent-forensics

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
agent_forensics/: __init__.py  classifier.py  core.py  dashboard.py  report.py  store.py
agent_forensics/integrations/: crewai.py  langchain.py  openai_agents.py
api-reference/: index.html
changelog/: index.html
content/: blog-01-why-agent-forensics.md  product-hunt-launch.md  reddit-posts.md
contributing/: index.html
docs/: api-reference.md  eu-ai-act.md  failure-patterns.md  getting-started.md  index.md  integrations.md
docs/integrations/: crewai.md  langchain.md  openai-agents.md
ecosystem/: README.md  awesome-lists.md  community-posts.md  openai-agents-pr-description.md
ecosystem/langchain-community-pr/: PR_DESCRIPTION.md  agent_forensics_callback.py
eu-ai-act/: index.html
examples/: example_crewai.py  example_langchain.py  example_manual.py  example_openai_agents.py
failure-patterns/: index.html
getting-started/: index.html
integrations/: index.html
integrations/crewai/: index.html
integrations/langchain/: index.html
integrations/openai-agents/: index.html
search/: search_index.json
tests/: conftest.py  test_classifier.py  test_core.py  test_report.py  test_store.py
